Menu tab switching functionality completed

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -107,3 +107,11 @@
 .overlay.show {
   opacity: 1;
 }
+
+
+/* /////////////////////////////////////////////////// */
+/*  ////////////////// dashboard //////////////////*/
+/* //////////////////////////////////////////////// */
+.active_tab_dashboard{
+  border-bottom: 2px solid #D1A94A;
+}
