--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -51,6 +51,7 @@
   );
   --default-bg-2: #22545f;
   --default-text-1: #0e687a;
+  --default-text-2: white;
 }
 
 *,
@@ -87,9 +88,9 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: var(--default-text-2);
   text-align: left;
-  background-color: #fff;
+  background-color: var(--default-bg-1);
 }
 
 [tabindex="-1"]:focus {
@@ -15467,10 +15468,11 @@ be a descendant of the grid when it is being dragged.
   min-height: calc(100vh - 50px);
   margin-top: 50px;
   padding: 30px;
-  background-color: #e5e5e5;
+  background: var(--default-bg-1);
   -webkit-transition: margin-left 0.3s ease;
   -o-transition: margin-left 0.3s ease;
   transition: margin-left 0.3s ease;
+  color: var(--default-text-2) !important;
 }
 
 @media (min-width: 768px) {
