--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -240,3 +240,35 @@
   margin: 0;
   font-weight: bold;
 }
+/* /////////////////////////////////////////////////// */
+/*  ////////////////// contact us //////////////////*/
+/* //////////////////////////////////////////////// */
+.contactus_banner h1 {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 47px;
+  margin: 0;
+}
+.contactus_main_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  height: calc(100vh - 280px);
+  margin-top: -10px;
+  margin-left: -13px;
+  margin-right: -13px;
+  background-color: var(--default-bg-3);
+}
+.contactus_main_container .sub_contact {
+  border-radius: 6px;
+  height: 250px;
+  width: 75vw;
+  background: rgba(113, 206, 224, 0.28);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.contactus_main_container .sub_contact h6 {
+  color: var(--default-text-3);
+}
