--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -316,3 +316,35 @@
   font-size: 20px;
   line-height: 23px;
 }
+/* /////////////////////////////////////////////////// */
+/*  ////////////////// Game rate //////////////////*/
+/* //////////////////////////////////////////////// */
+.game_rate_main_container{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 40px;
+  height: calc(100vh - 230px);
+  margin-top: -10px;
+  margin-left: -13px;
+  margin-right: -13px;
+  background-color: var(--default-bg-3);
+  color: var(--default-text-3);
+}
+.game_rate_card {
+  font-weight: 600;
+  font-size: 14px;
+  width: 95%;
+  height: 42px;
+  background: #e9c86f;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.46);
+  border-radius: 6px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px;
+  padding-top: 16.5px;
+  font-weight: bold;
+}
