--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,6 +8,7 @@
   --default-bg-2: #22545f;
   --default-bg-3: white;
   --default-bg-4: #71a6b1;
+  --default-bg-5: #e2a610;
   --default-text-1: #0e687a;
   --default-text-2: white;
   --default-text-3: black;
@@ -363,4 +364,214 @@
   justify-content: space-around;
   align-items: center;
   text-align: center;
+}
+/* //////////////////////////////////////////////////  */
+/*  ////////////////// Bid        //////////////////  */
+/* ////////////////////////////////////////////////  */
+.bid_top_bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--default-bg-3);
+  color: var(--default-text-3);
+  margin-left: -13px;
+  margin-right: -13px;
+  margin-top: -14px;
+  height: 28px;
+  padding: 3px;
+}
+.bid_open_close_btn {
+  background-color: var(--default-bg-3);
+  color: var(--default-text-3);
+  font-weight: bold;
+  font-size: 16px;
+  padding: 8px 10px;
+  box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  text-align: center;
+  width: 120px;
+}
+/* Hide the browser's default radio button */
+.bid_open_close_btn input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.bid_open_close_btn .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.bid_open_close_btn:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.bid_open_close_btn input:checked ~ .checkmark {
+  background-color: var(--default-bg-5);
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.bid_open_close_btn .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.bid_open_close_btn input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.bid_open_close_btn .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+.bid_input_box {
+  background: rgba(255, 255, 255, 0.79);
+  border-radius: 6px;
+}
+.bid_input_box input {
+  outline: none;
+  width: 120px;
+  border: 1px solid #d1a94a;
+  box-sizing: border-box;
+  border-radius: 6px;
+  padding: 8px 24px;
+}
+.bid_input_box button {
+  background: var(--default-bg-2);
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  width: 90px;
+  padding: 4px 0px;
+  color: var(--default-text-2);
+  font-weight: bold;
+  filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.4));
+}
+.bid_list_table_container {
+  background-color: var(--default-bg-3);
+  border-radius: 6px;
+}
+/* //////////////////////////////////////////////////  */
+/*  ////////////////// Profile        //////////////////  */
+/* ////////////////////////////////////////////////  */
+.profile_Pic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.profile_Pic .profile_img {
+  width: 91px;
+  height: 91px;
+  border-radius: 50%;
+  z-index: 99;
+  border: 2px solid white;
+  margin-top: 30px;
+}
+
+.formdata {
+  background: #28b9d94f;
+  width: 100%;
+  margin: 20px auto;
+  padding: 25px 25px 10px;
+  border-radius: 10px;
+}
+
+.name {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#fname,
+#lname {
+  width: 47%;
+}
+
+.formdata input {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 7px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
+.formdata small {
+  display: inline-block;
+  margin-bottom: 3px;
+}
+
+.btnWrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btnWrapper button {
+  padding: 10px 80px;
+  background: skyblue;
+  border: none;
+  outline: none;
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
+.accordion-item {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1rem;
+  border-radius: 5px;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.09);
+  cursor: pointer;
+  background: #28b9d94f;
+  margin-bottom: 0.5em;
+  padding-top: 15px;
+}
+.item-header {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 0.2em;
+}
+
+.item-icon {
+  flex: 0 0 25px;
+  display: grid;
+  place-items: center;
+  font-size: 1.25rem;
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+}
+.item-icon i {
+  transition: all 0.25s cubic-bezier(0.5, 0, 0.1, 1);
+}
+.item-question {
+  font-size: 1.3em;
+  line-height: 28px;
+  font-weight: bold;
+}
+
+.active .item-icon i {
+  transform: rotate(180deg);
+}
+
+.item-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 300ms ease;
 }
