--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -13224,7 +13224,7 @@ body.stop-scrolling {
     0 3px 10px rgba(0, 0, 0, 0.16);
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
   border: 0 !important;
-  max-width: 400px;
+  width: 95vw !important;
   color: #fff;
 }
 
