--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -193,6 +193,25 @@
 /* /////////////////////////////////////////////////// */
 /*  ////////////////// withdrawal //////////////////*/
 /* //////////////////////////////////////////////// */
+.transaction_list_top_section {
+  height: 123px;
+  background: rgba(255, 255, 255, 0.69);
+  margin-left: -13px;
+  margin-right: -13px;
+}
+.transaction_list_top_section div {
+  background: #9cd3de;
+  border: 2.5px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  height: 73px;
+  width: 199px;
+}
+.transaction_list_top_section div p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
 .transaction_main_container {
   background-color: var(--default-bg-3);
   color: var(--default-text-3);
