--- a/css/style.css
+++ b/css/style.css
@@ -164,14 +164,14 @@
 }
 /*// KEYFRAMES //*/
 
-@keyframes jump{
-  0%{
+@keyframes jump {
+  0% {
     transform: scale(1);
   }
-  50%{
+  50% {
     transform: scale(0.9);
   }
-  100%{
+  100% {
     transform: scale(1);
   }
 }
@@ -205,12 +205,14 @@
 .ongoing_card.upcoming_card p img {
   height: 10px;
 }
-.home_page_whatsApp{
+.home_page_whatsApp {
   position: fixed;
   right: 30px;
   bottom: 30px;
+  background-color: var(--default-bg-2);
+  border-radius: 50%;
 }
-.home_page_whatsApp span{
+.home_page_whatsApp span {
   position: absolute;
   top: -10px;
   right: -10px;
@@ -546,7 +548,7 @@
   border: none;
 }
 .bid_play_btn:disabled,
-.bid_play_btn[disabled]{
+.bid_play_btn[disabled] {
   width: 192px;
   height: 40.87px;
   font-size: 20px;
