--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@
   border-bottom: 2px solid #d1a94a;
 }
 .home_page_main_container {
-  height: calc(100vh - 205px);
+  height: calc(100vh - 216px);
   overflow: auto;
 }
 .ongoing_card {
@@ -153,14 +153,14 @@
   width: 90%;
 }
 .ongoing_card .game_card_play_btn {
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
   position: absolute;
   top: 25%;
   right: 10px;
 }
 .ongoing_card .game_card_play_btn.open_game_button {
-  animation: jump 2s linear infinite;
+  animation: jump 1s linear infinite;
 }
 /*// KEYFRAMES //*/
 
@@ -218,6 +218,64 @@
   right: -10px;
   color: gray;
 }
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  overflow: hidden;
+}
+
+/* Caption text */
+.slideshow-container .text {
+  color: #f2f2f2;
+  position: absolute;
+  bottom: 2px;
+  width: 100%;
+  text-align: center;
+}
+/* The dots/bullets/indicators */
+.slideshow-container .dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.slideshow-container .active {
+  background-color: red;
+}
+
+/* Fading animation */
+.slideshow-container .fade {
+  animation-name: fade;
+  animation-duration: 2s;
+}
+.slideshow-container .mySlides {
+  display: none;
+}
+.slideshow-container .mySlides img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .slideshow-container .text {
+    font-size: 11px;
+  }
+}
+
 /* /////////////////////////////////////////////////// */
 /*  ////////////////// withdrawal //////////////////*/
 /* //////////////////////////////////////////////// */
