--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,7 @@
   font-weight: bold;
   filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.4));
 }
-.bid_dropdown{
+.bid_dropdown {
   position: absolute;
   background-color: white;
   color: black;
@@ -601,7 +601,7 @@
   flex-direction: column;
   display: none;
 }
-.bid_dropdown small{
+.bid_dropdown small {
   padding: 6px 6px 6px 9px;
   font-size: 14px;
 }
@@ -633,6 +633,36 @@
   background: #c7bb9f;
   border-radius: 9px;
   border: none;
+}
+/* //////////////////////////////////////////////////  */
+/*  ////////////////// rules_container        //////////////////  */
+/* ////////////////////////////////////////////////  */
+.rules_container {
+  background-color: white;
+  color: black;
+  margin: 0px -12px;
+  height: calc(100vh - 250px);
+  overflow: auto;
+}
+.rules_container .rules_box {
+  background: #d7f1f6;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 9px;
+  text-align: center;
+  padding: 0px 10px;
+  position: relative;
+  margin: 20px;
+  padding-top: 10px;
+  padding-bottom: 1px;
+}
+.rules_container .rules_box div {
+  position: absolute;
+  left: -10px;
+  top: calc(50% - 12.5px);
+  background: #185e6c;
+  border-radius: 8px 0px 0px 8px;
+  height: 23px;
+  width: 17px;
 }
 /* //////////////////////////////////////////////////  */
 /*  ////////////////// Profile        //////////////////  */
