--- a/css/main.css
+++ b/css/main.css
@@ -4944,45 +4944,6 @@ input[type="button"].btn-block {
   }
 }
 
-@media (min-width: 768px) {
-  .navbar-expand-md {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: row nowrap;
-    flex-flow: row nowrap;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-  }
-  .navbar-expand-md .navbar-nav {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  .navbar-expand-md .navbar-nav .dropdown-menu {
-    position: absolute;
-  }
-  .navbar-expand-md .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-  }
-  .navbar-expand-md > .container,
-  .navbar-expand-md > .container-fluid {
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-  }
-  .navbar-expand-md .navbar-collapse {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-  }
-  .navbar-expand-md .navbar-toggler {
-    display: none;
-  }
-}
 
 @media (max-width: 991.98px) {
   .navbar-expand-lg > .container,
@@ -15437,19 +15398,9 @@ be a descendant of the grid when it is being dragged.
   background-color: #00635a;
 }
 
-@media (min-width: 768px) {
-  .app.sidenav-toggled .app-content {
-    margin-left: 0;
-  }
-  .app.sidenav-toggled .app-sidebar {
-    left: -230px;
-  }
-  .app.sidenav-toggled .app-sidebar__overlay {
-    visibility: hidden;
-  }
-}
 
-@media (max-width: 767px) {
+
+/* @media (max-width: 767px) { */
   .app {
     overflow-x: hidden;
   }
@@ -15468,7 +15419,7 @@ be a descendant of the grid when it is being dragged.
   .app.sidenav-toggled .app-sidebar__overlay {
     visibility: visible;
   }
-}
+/* } */
 
 .app-content {
   min-height: calc(100vh - 50px);
@@ -15481,11 +15432,7 @@ be a descendant of the grid when it is being dragged.
   color: var(--default-text-2) !important;
 }
 
-@media (min-width: 768px) {
-  .app-content {
-    margin-left: 230px;
-  }
-}
+
 
 @media (max-width: 767px) {
   .app-content {
@@ -15926,85 +15873,7 @@ be a descendant of the grid when it is being dragged.
   transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
-@media (min-width: 768px) {
-  .sidebar-mini.sidenav-toggled .app-sidebar__user-name,
-  .sidebar-mini.sidenav-toggled .app-sidebar__user-designation,
-  .sidebar-mini.sidenav-toggled .treeview-indicator {
-    display: none;
-  }
-  .sidebar-mini.sidenav-toggled .app-sidebar__user-avatar {
-    width: 30px;
-    height: 30px;
-  }
-  .sidebar-mini.sidenav-toggled .app-content {
-    margin-left: 50px;
-  }
-  .sidebar-mini.sidenav-toggled .app-sidebar {
-    left: 0;
-    width: 50px;
-    overflow: hidden;
-  }
-  .sidebar-mini.sidenav-toggled .app-sidebar:hover {
-    overflow: visible;
-  }
-  .sidebar-mini.sidenav-toggled .app-menu__item {
-    overflow: hidden;
-  }
-  .sidebar-mini.sidenav-toggled .app-menu__item:hover {
-    overflow: visible;
-  }
-  .sidebar-mini.sidenav-toggled .app-menu__item:hover .app-menu__label {
-    opacity: 1;
-  }
-  .sidebar-mini.sidenav-toggled .app-menu__item:hover + .treeview-menu {
-    visibility: visible;
-  }
-  .sidebar-mini.sidenav-toggled .app-menu__label {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 50px;
-    min-width: 180px;
-    padding: 12px 5px 12px 20px;
-    margin-left: -3px;
-    line-height: 1;
-    opacity: 0;
-    background: #0d1214;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
-  .sidebar-mini.sidenav-toggled .treeview:hover .app-menu__item {
-    overflow: visible;
-    background: #0d1214;
-    border-left-color: var(--default-bg-2);
-    color: #fff;
-  }
-  .sidebar-mini.sidenav-toggled .treeview:hover .app-menu__label {
-    opacity: 1;
-  }
-  .sidebar-mini.sidenav-toggled .treeview:hover .treeview-menu {
-    max-height: 100vh;
-    opacity: 1;
-    visibility: visible;
-    z-index: 10;
-  }
-  .sidebar-mini.sidenav-toggled .treeview .app-menu__label {
-    border-bottom-right-radius: 0;
-  }
-  .sidebar-mini.sidenav-toggled .treeview-menu {
-    position: absolute;
-    left: 50px;
-    min-width: 180px;
-    padding: 12px 0;
-    opacity: 0;
-    border-bottom-right-radius: 4px;
-    z-index: 9;
-    visibility: hidden;
-    -webkit-transition: visibility 0.3s ease;
-    -o-transition: visibility 0.3s ease;
-    transition: visibility 0.3s ease;
-  }
-}
+
 
 .dropdown-menu {
   border-radius: 0;
