--- a/css/style.css
+++ b/css/style.css
@@ -668,11 +668,19 @@
 /*  ////////////////// Profile        //////////////////  */
 /* ////////////////////////////////////////////////  */
 .profile_Pic {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
 }
+#profile_image_input_field{
+  display:none;
+}
+.profile_Pic label{
+  position: absolute;
+  bottom: -10px;
+  right: -5px;
+  background: var(--default-bg-1);
+  border-radius: 50%;
+  padding: 3px 5px ;
+  }
 .profile_Pic .profile_img {
   width: 91px;
   height: 91px;
